--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accueil</title>
+    <script src="fctn.js" defer></script>
+    
 </head>
+
+
 <body>
 
-    <p> TEEEEEST</p>
-    
+    <div id="header">
+        <h1>Bienvenue sur mon site</h1>
+        <p>Je suis Jenna Djaouel, étudiante en BUT Informatique Graphique</p>
+        <p>Voici mes projets et mes contacts</p></div>
+    <!-- <header> 
+        <button onclick="location.href='home.html'">Home</button>
+        <button onclick="location.href='projets.html'">Projets</button>
+        <button onclick="location.href='contacts.html'">Contacts</button>
+        <button onclick="location.href='about.html'">A prout</button>
+    </header> -->
 </body>
 </html>
