--- a/projets.html
+++ b/projets.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets</title>
-    <script src="fctn.js" defer></script>
+    <!-- <script src="fctn.js" defer></script> -->
+     <script>
+    fetch('header.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('header').innerHTML = data;
+      });
+  </script>
 </head>
 <body>
     <header>
-        
+        <!-- <div id="header"></div> -->
     </header>
    
         <h1>Projets</h1>
