--- a/accueil.html
+++ b/accueil.html
@@ -1,20 +1,19 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <script src="fctn.js" defer></script>
 
 </head>
 
 
 <body>
 
-    <div id="header">
+    
         <h1>Bienvenue sur mon site</h1>
         <p>Je suis Jenna Djaouel, étudiante en BUT Informatique Graphique</p>
         <p>Voici mes projets et mes contacts</p></div>
 
 </body>
-</html> -->
+</html>
