--- a/contacts.html
+++ b/contacts.html
@@ -10,6 +10,8 @@
     <a href="https://linkedin.com/in/jenna-djaouel"  target="_blank">LinkedIN</a>
     <a href="https://github.com/cpp-archer"  target="_blank">GitHub</a>
     <a href="jennalouisa.djaouel@outlook.com"  target="_blank" >Email</a>
-    
+    <a href="sonic.jpeg" download> <img src="sonic.jpeg" alt="CV" width="250"></a> 
+
+
 </body>
 </html>
