--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
 <body>
 
-    <div id="header">
-        <h1>Bienvenue sur mon site</h1>
-        <p>Je suis Jenna Djaouel, étudiante en BUT Informatique Graphique</p>
-        <p>Voici mes projets et mes contacts</p></div>
+    <div id="header"></div>
+        <h1>Bienvenue surmon portfolio ! </h1>
+        <p>Je suis Jenna-Louisa Djaouel, étudiante de 2ème année d'un BUT d'Informatique Graphique</p> <br>
+        <p>Je suis passionnée par le développement de jeux vidéo et la création d'expériences immersives.</p>
+        <p>Je suis également intéressée par l'UX/UI design et la création de sites web.</p> <br>
+        <p>Je suis à la recherche d'une alternance dans le developpement de jeux video ou dans le developpement web ou  </p>
+        <p>Voici mes projets et mes contacts</p>
 
 </body>
 </html>
