test css + ajouts projet

--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <script src="fctn.js" defer></script>
     <title>Contacts</title>
+     <div id="header"></div>
+
 </head>
 <body>
 
