--- a/projets.html
+++ b/projets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets</title>
      <script src="fctn.js" defer></script>
+      <div id="header"></div>
      
 </head>
 <body>
