--- a/projetsUni.html
+++ b/projetsUni.html
@@ -102,13 +102,13 @@
 </div></section>
 <!--------------------------------------------------------------------------->
 
-  <section id="apps-web">
-      <h2>📱 Projets Web & Applications</h2>
+  <section id="appWeb">
+      <h2>Projets Web & Applications</h2>
     <div class="climatApp">
         
         <h1>Climat APP</h1>
-            <p>MLK est une visite d'un musée virtuel developpé sur Unreal Engine </p>
-            <p>Il a été réalisé dans le cadre d'un projet universitaire important lors de ma 1eme année de BUT informatique graphique</p>
+            <p>Developpement d'une interafece interactive sur les changements climatiques d'une zone meteorologiques données au fil des années </p>
+            <p>Il a été réalisé dans le cadre d'un projet universitaire important lors de ma 1ere année de BUT informatique graphique</p>
 
         <button onclick="toggleDetails(this)">Details</button>
 
