--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div id="header"></div>
+    <div class = "intro"></div>
         <h1>Bienvenue surmon portfolio ! </h1>
         <p>Je suis Jenna-Louisa Djaouel, étudiante de 2ème année d'un BUT d'Informatique Graphique</p> <br>
         <p>Je suis passionnée par le développement de jeux vidéo et la création d'expériences immersives.</p>
@@ -19,5 +20,65 @@
         <p>Je suis à la recherche d'une alternance dans le developpement de jeux video ou dans le developpement web ou  </p>
         <p>Voici mes projets et mes contacts</p>
 
+    </div>
+ 
+    <div>
+        <h2> Apecu de mes competences</h2>
+        <div class = "comeptences">
+ 
+            <h3>Langages de programmation</h3>
+            <div id="details" style="display: none;">
+            <button onclick="toggleDetails(this)">Derouler la liste</button>
+            
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+                <li>C++</li>
+                <li>Python</li>
+                <li>Kotlin</li>
+            </ul>   
+            </div>
+
+
+            <h3>Logiciels</h3>
+            <button onclick="toggleDetails(this)">Derouler la liste</button>
+            <div id="details" style="display: none;">
+            <ul>
+                <li>Unity</li>
+                <li>Unreal Engine</li>
+                <li>Blender</li>
+                <li>Visual Studio</li>
+                <li>Visual Studio Code</li>
+                <li>Android studio</li>       
+            </ul>
+           </div> 
+            
+            <h3>Soft Skills</h3>
+            <button onclick="toggleDetails(this)">Derouler la liste</button>
+            <div id="details" style="display: none;">
+            <ul>
+                <li> Teamwork et esprit d'équipe </li>
+                <li> Communication </li>
+                <li> </li>
+                </li>
+            </ul>   
+        </div>
+            <h3> Competences techniques </h3>
+            <button onclick="toggleDetails(this)">Derouler la liste</button>
+            <div id="details" style="display: none;">
+            <ul>    
+                <li> Conception d'interfaces interactives et intuitives</li>
+                <li> Conception d'interactions et de zones d'interactions</li>
+                <li> Gestion de base de donnee</li>
+                <li> Etablir une liaison backend entre bdd et actions</li>
+                <li> Conception de jeux videos </li>
+            </ul>
+            </div>
+        </div>
+
+
+    </div>
 </body>
 </html>
