--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
             <p> premier declic : pokemon heart gold sur la DS lite</p>
         </div>
 
-        <p>Je suis à la recherche d'une alternance dans le developpement de jeux video ou dans le developpement web ou  </p>
-
-        <p>Voici mes projets et mes contacts</p>
+        
 
     </div>
  
-   
 
         <div class = "competences">
 
@@ -47,30 +44,23 @@
                 <h3>Langages de programmation</h3>
                 <button class="btn" onclick="toggleDetails(this)">Derouler la liste</button>
                 <div id="details" style="display: none;">
-                    <ul id="liste">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>C#</li>
-                        <li>C++</li>
-                        <li>Python</li>
-                        <li>Kotlin</li>
-                    </ul>   
+                    <img id="logo" src="./img/HTML5_logo.png" alt="logo de HTML"> 
+                    <img id="logo" src="./img/js-logo.png" alt="logo de javascript" > 
+                    <img id="logo" src="./img/CSS3_logo.png" alt="logo de CSS">
+                    <img id="logo" src="./img/cs-logo.png" alt="logo de C#">
+                    <img id="logo" src="./img/cpp-logo.png" alt="logo de C++">
+                    <img id="angular" src="./img/angular.png" alt="logo de Angular"   > <img id="logo" src="./img/Typescript_logopng.png" alt="logo de typescript">     
                 </div>
             </div>
 
             <div class = "Logiciels">
                 <h3>Logiciels</h3>
                 <button class="btn" onclick="toggleDetails(this)">Derouler la liste</button>
-                <div id="details" style="display: none;">
-                    <ul id="liste">
-                        <li>Unity</li>
-                        <li>Unreal Engine</li>
-                        <li>Blender</li>
-                        <li>Visual Studio</li>
-                        <li>Visual Studio Code</li>
-                        <li>Android studio</li>       
-                    </ul>
+                <div id="details" style="display: none;">                    
+                    <img  src="./img/unity.png" alt="logo de HTML">
+                    <img src="./img/blender.png" alt="logo de blender">
+                    <img  src="./img/visualstudiopng.png" alt="logo devisual studio">
+                    <img  src="./img/vscode.png" alt="logo de visual studio code">
                 </div> 
             </div>
 
