--- a/contacts.html
+++ b/contacts.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <script src="fctn.js" defer></script>
     <title>Contacts</title>
-     <div id="header"></div>
+    <link rel="stylesheet" href="contacts.css">
+     <!-- <div id="header"></div> -->
 
 </head>
+<header> <button class="btn" onclick="location.href = 'index.html'">Accueil</button>
+        <button class="btn" onclick="location.href = 'projets.html'">Projets</button>
+        <button class="btn" onclick="location.href = 'contacts.html'">Contacts CV</button>
+</header>
 <body>
 
     <a href="https://linkedin.com/in/jenna-djaouel"  target="_blank">LinkedIN</a>
     <a href="https://github.com/cpp-archer"  target="_blank">GitHub</a>
     <a href="jennalouisa.djaouel@outlook.com"  target="_blank" >Email</a>
-    <a href="sonic.jpeg" download> <img src="sonic.jpeg" alt="CV" width="250"></a> 
+    <a href="./img/sonic.jpeg" download> <img src="sonic.jpeg" alt="CV" width="250"></a> 
 
 
 </body>
