--- a/projetsUni.html
+++ b/projetsUni.html
@@ -6,8 +6,13 @@
     <title>Projets Universitaires</title>
     <script src="fctn.js" defer></script>
     <link rel="stylesheet" href="projetsUni.css">
-     <div id="header"></div>
+     <!-- <div id="header"></div> -->
 </head>
+
+<header> <button class="btn" onclick="location.href = 'index.html'">Accueil</button>
+        <button class="btn" onclick="location.href = 'projets.html'">Projets</button>
+        <button class="btn" onclick="location.href = 'contacts.html'">Contacts CV</button>
+</header>
 <body>
     
 <nav style="padding: 1rem;">
