--- a/contacts.html
+++ b/contacts.html
@@ -15,10 +15,10 @@
 </header>
 <body>
 
-    <a href="https://linkedin.com/in/jenna-djaouel"  target="_blank">LinkedIN</a>
-    <a href="https://github.com/cpp-archer"  target="_blank">GitHub</a>
-    <a href="jennalouisa.djaouel@outlook.com"  target="_blank" >Email</a>
-    <a href="./img/sonic.jpeg" download> <img src="sonic.jpeg" alt="CV" width="250"></a> 
+    <a href="https://linkedin.com/in/jenna-djaouel"  target="_blank"><button class="btn">LinkedIN</button></a> 
+                <a href="https://github.com/cpp-archer"  target="_blank"><button class="btn">GitHub</button></a>
+                <a href="jennalouisa.djaouel@outlook.com"  target="_blank" ><button class="btn">Email</button></a> 
+                <a href="./img/CV_DJAOUEL_JennaLouisa.pdf"  download > <img class="cv" src="./img/CV_DJAOUEL_JennaLouisa-1.png" alt="CV" width="400px" height="550px"></a> 
 
 
 </body>
