--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
     <div class="card">
         <h2>Qui suis-je ?</h2>
-        <p>Passionnée par le développement de jeux vidéo, je m'intéresse à la création d'expériences interactives et immersives.</p>
-        <p>J’aime également concevoir des logiciels et applications utiles et bien pensés.</p>
+        <p>Je suis une étudiante de 20ans aspirant à travailler dans le développement de jeux vidéo.</p>
+        <p>Créer des expériences interactives et immersives est toujours satisfaisant à mes yeux. J'ai l'impression de donner vie à des bouts de codes et d'images.</p>
     </div>
 
     <div class="card">
         <h2>Pourquoi ce domaine ?</h2>
         <p>Depuis petite, j’ai toujours voulu comprendre ce qui se cache derrière l’écran lors de nos interactions numériques.</p>
-        <p>Le premier déclic ? <em>Pokémon Heart Gold</em> sur ma Nintendo DS Lite.</p>
+        <p> Pokémon Heart Gold sur ma Nintendo DS Lite a été mon premier déclic.</p>
     </div>
 </div>
 
@@ -47,7 +47,7 @@
 
             <div class = "Langages">
                 <h3>Langages de programmation</h3>
-                <button class="btn" onclick="toggleDetails(this)">Derouler la liste</button>
+                <button class="btn" onclick="toggleDetails(this)">Dérouler la liste</button>
                 <div id="details" style="display: none;">
                     <img id="logo" src="./img/HTML5_logo.png" alt="logo de HTML"> 
                     <img id="logo" src="./img/js-logo.png" alt="logo de javascript" > 
@@ -60,7 +60,7 @@
 
             <div class = "Logiciels">
                 <h3>Logiciels</h3>
-                <button class="btn" onclick="toggleDetails(this)">Derouler la liste</button>
+                <button class="btn" onclick="toggleDetails(this)">Dérouler la liste</button>
                 <div id="details" style="display: none;">                    
                     <img  src="./img/unity.png" alt="logo de HTML">
                     <img src="./img/blender.png" alt="logo de blender">
@@ -72,7 +72,7 @@
 
             <div class = "softskills">
                 <h3>Soft Skills</h3>
-                <button class="btn"onclick="toggleDetails(this)">Derouler la liste</button>
+                <button class="btn"onclick="toggleDetails(this)">Dérouler la liste</button>
                 <div id="details" style="display: none;">
                     
                         <ul id="liste">
@@ -87,8 +87,8 @@
             </div>
 
             <div class = "comptech">
-                <h3> Competences techniques </h3>
-                <button class="btn" onclick="toggleDetails(this)">Derouler la liste</button>
+                <h3> Compétences techniques </h3>
+                <button class="btn" onclick="toggleDetails(this)">Dérouler la liste</button>
                 <div id="details" style="display: none;">
                     
                         <ul id="liste">    
@@ -111,7 +111,7 @@
                 <!-- <img src="./img/lycee.jpg" alt="lycee nelson mandela marseille"> -->
                 <p><strong>2023/2026</strong> <br> <br>IUT Clermont Auvergne <br> Site du Puy-en-Velay <br> 8 Rue Jean Baptiste Fabre <br>43000 le Puy-en-Velay, France </p>
                 <!-- <img src="./img/iut.jpg" alt="iut site du puy en velay"> -->     
-                <p><strong>2025</strong> <br><br>Stage de deuxieme année de BUT Informatique Graphique <br> Conseil départemental des bouches du rhones <br> Espace Nobel , 11 rue Frédérique Joliot Curie <br> 13000 Marseille, France</p>                 
+                <p><strong>2025</strong> <br><br>Stage de 2ème année de BUT Informatique Graphique <br> Conseil départemental des Bouches-du-Rhônes <br> Espace Nobel , 11 rue Frédérique Joliot Curie <br> 13000 Marseille, France</p>                 
         </div>
 
 
